--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +18,7 @@
     "moment": "^2.30.1",
     "mysql2": "^3.15.3",
     "pdfkit": "^0.17.2",
+    "puppeteer": "^21.11.0",
     "uuid": "^13.0.0"
   }
 }
